Edwin es Sánchez xd

--- a/app/src/main/res/raw/names.html
+++ b/app/src/main/res/raw/names.html
@@ -2,7 +2,7 @@
 <br/>
 <h3>&nbsp;• Gabriel Lizano Alvarado.<br/>&nbsp;Cédula: 402380730.</h3>
 <br/>
-<h3>&nbsp;• Edwin Lobo Sáenz.<br/>&nbsp;Cédula: 117120749.</h3>
+<h3>&nbsp;• Edwin Daniel Lobo Sánchez.<br/>&nbsp;Cédula: 117120749.</h3>
 <br/>
 <h3>&nbsp;• Janice Prendas Roldán.<br/>&nbsp;Cédula: 117210146.</h3>
 <br/>
